# mystd

./: CMakeLists.txt  README.md
examples/: cartesian_product_example.cpp  iterator_example.cpp  stopwatch_example.cpp
include/mystd/: algorithm.h  chrono.h  iterator.h  meta.h  numeric.h  random.h  type_traits.h
include/mystd/algorithm/: adjacent_count.h  copy_n.h  find_last.h  find_last_if.h  move_n.h  unique_copy_with_count.h
include/mystd/chrono/: duration_traits.h  output.h  stopwatch.h
include/mystd/meta/: max.h  min.h
include/mystd/numeric/: cartesian_product.h
